fix dropdown overlaping issue

--- a/src/scss/component/_dropdown.scss
+++ b/src/scss/component/_dropdown.scss
@@ -4,7 +4,6 @@
 .f-dropdown {
     --max-scroll: 3;
     position: relative;
-    z-index: 1;
 
     select {
         display: none;
